--- a/css/footer.css
+++ b/css/footer.css
@@ -1,8 +1,8 @@
 .footer {
-    background: linear-gradient(to right, rgb(35, 94, 74, 0.8), rgb(36, 69, 86, 0.8), rgb(27, 75, 58, 0.8));
+    background: linear-gradient(to right,rgba(84, 205, 224, 0.5), rgba(138, 94, 205, 0.5));
     color: #fff;
     text-align: center;
-    padding: 10px;
+    padding: 1px;
     position: fixed;
     bottom: 0;
     left: 0;
@@ -16,18 +16,18 @@
   }
   
   .footer li {
-    color: #e7e4de;
+    color: #ffffff8a;
     display: inline-block;
     margin: 0 10px;
   }
   
   .footer li a {
-    color: #fff;
+    color: #ffffff8a;
     text-decoration: none;
     transition: all 0.3s ease;
     font-family: Arial, sans-serif;
     font-size: 16px;
-    font-weight: bold;
+    font-weight:lighter;
   }
   
   .footer li a:hover {
