--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,7 @@
   --main-max-width: 800px;
   --bg-color: #fbfefd;
 }
+
 html {
   /* background-image: url("/images/sea.jpg"); */
   background-image: url(https://api.oneneko.com/v1/bing_today);
@@ -17,6 +18,14 @@ body {
   font-family: Arial, sans-serif;
   padding-bottom: 70px;
   /* background-color: var(--bg-color); */
+  cursor: url(/icons/icons8-cat-32.png), auto;
+}
+
+*:active {
+  cursor: url(/icons/maneki-neko-32.png), auto;
+}
+a:hover {
+  cursor: url(/icons/kitty-32.png), auto;
 }
 
 header {
@@ -116,6 +125,7 @@ main {
   margin-top: 15px;
 }
 .btn-1:hover {
+  cursor: url(/icons/kitty-32.png), auto;
   padding-left: 0px;
   padding-right: 40px;
   color: rgba(255, 255, 255, 1);
@@ -161,7 +171,7 @@ main {
   color: #009688;
   background: #fff;
   border: 1px solid #009688;
-  font-size: 17px;
+  font-size: 16px;
   padding: 7px 12px;
   font-weight: normal;
   margin: 6px 0;
@@ -173,9 +183,10 @@ main {
 }
 .btn2:hover,
 .btn2:active {
+  cursor: url(/icons/kitty-32.png), auto;
   color: #fff;
   background: #009688;
-  font-size: 18px;
+  font-size: 16px;
 }
 
 .button-container {
@@ -187,6 +198,7 @@ main {
 .ssn {
   max-width: var(--main-max-width);
   margin: 20px auto 0;
+  margin-bottom: 10px;
   padding: 5px;
   /* background-color: #f2f7ef; */
   background-color: rgba(242, 247, 239, 0.85);
@@ -197,6 +209,12 @@ main {
   text-align: center;
   color: #333;
 }
+
+.ssn p {
+  margin: 3px auto 3px;
+  margin-bottom: 3px;
+}
+
 .clockb {
   max-width: var(--main-max-width);
   margin: 20px auto 0;
@@ -212,6 +230,43 @@ main {
   display: block;
   width: 250px;
   height: 90px;
+}
+
+.videoModal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 90%;
+  height: 90%;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+  background-color: rgba(246, 214, 156, 0.8);
+}
+
+.videoContainer {
+  position: relative;
+  width: 100%;
+  padding-top: 56.25%; /* 16:9 比例的视频高度 */
+}
+
+.videoPlayer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.videoOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
 }
 
 @media screen and (max-width: 767px) {
