--- a/css/index.css
+++ b/css/index.css
@@ -96,14 +96,14 @@ main {
 
 .btn-1-back {
   position: relative;
-  width: 160px;
-  height: 45px;
+  width: 90px;
+  height: 25px;
   background: rgba(15, 45, 45);
   border-radius: 45px;
 }
 .btn-1 {
   position: relative;
-  width: calc(100% - 40px);
+  width: calc(100% - 25px);
   height: 100%;
   background: rgba(255, 255, 255, 0.1);
   border-radius: 45px;
@@ -111,60 +111,63 @@ main {
   justify-content: center;
   align-items: center;
   color: rgba(255, 255, 255, 0.5);
-  text-decoration: none;
-  letter-spacing: 2px;
+  /* text-decoration: none; */
+  letter-spacing: 1px;
   border-top: 0.5px solid rgba(255, 255, 255, 0.35);
   border-left: 0.5px solid rgba(255, 255, 255, 0.35);
-  padding-left: 40px;
-  transition: 0.5s;
+  padding-left: 25px;
   overflow: hidden;
   font-family: "Songti TC";
-  font-size: 20px;
-}
-.btn-1 p {
-  margin-top: 15px;
 }
 .btn-1:hover {
   cursor: url(/icons/kitty-32.png), auto;
-  padding-left: 0px;
-  padding-right: 40px;
-  color: rgba(255, 255, 255, 1);
-}
-.btn-1 span {
+} 
+.btn-1 > p {
   position: absolute;
-  left: 5px;
-  width: 35px;
-  height: 35px;
+  margin-top: 8px;
+  right: 11px;
+  transition: 0.75s ease-in-out;  
+  font-size: 12px;
+}
+.btn-1 > span {
+  position: absolute;
+  top: -1px;
+  left: -1px;
+  width: 25px;
+  height: 25px;
   background: wheat;
   border-radius: 50%;
-  transition: 0.5s ease-in-out;
+  transition: 0.65s ease-in-out;
   display: flex;
   justify-content: center;
   align-items: center;
   color: black;
-  font-size: 35px; /* 字体大小 */
+  font-size: 25px; /* 字体大小 */
 }
-.btn-1 span p {
-  margin-top: 80%;
+.btn-1 > span > p {
+  position: absolute;
+  margin-top: 85%;
 }
-.btn-1:hover span {
-  left: calc(100% - 40px);
+.btn-1:hover > span {
+  left: calc(100% - 25px);
+}
+.btn-1:hover > p {
+  right: 30px;
 }
 .btn-1:after {
   content: "";
   position: absolute;
   width: 35px;
   height: 35px;
-  z-index: 1;
   background: rgba(255, 255, 255, 0.25);
   transform: translateX(-150px) skewX(30deg);
   transition: 0.75s ease-in-out;
 }
 .btn-1:hover:after {
-  transform: translateX(150px) skewX(30deg);
+  transform: translateX(50px) skewX(30deg);
 }
 .btn-1:active {
-  font-size: 30px;
+  font-size: 10px;
 }
 
 .btn2 {
@@ -172,14 +175,14 @@ main {
   background: #fff;
   border: 1px solid #009688;
   font-size: 16px;
-  padding: 7px 12px;
+  padding: 1px 1px;
   font-weight: normal;
-  margin: 6px 0;
-  margin-right: 12px;
+  /* margin: 6px 0;
+  margin-right: 12px; */
   display: inline-block;
   text-decoration: none;
   font-family: "Open Sans", sans-serif;
-  min-width: 120px;
+  min-width: 50px;
 }
 .btn2:hover,
 .btn2:active {
@@ -192,8 +195,16 @@ main {
 .button-container {
   max-width: var(--main-max-width);
   margin: 20px auto 0;
-  display: flex;
-  justify-content: center;
+  padding: 5px;
+  /* text-align: center; */
+  display: flex;  
+  justify-content: center;  
+  align-items: center;  
+
+}
+.buttoncontainer button {  
+  margin: 15px, 15px, 15px; /* 调整间距 */  
+  padding: 10px; /* 调整内边距 */  
 }
 .ssn {
   max-width: var(--main-max-width);
@@ -267,6 +278,25 @@ main {
   width: 100%;
   height: 100%;
   background-color: transparent;
+}
+
+.clustrmap {  
+  width: 2px;  
+  height: 2px;  
+  border: 2px solid; /* 确保边框宽度为2px */  
+  box-sizing: border-box; /* 确保边框和内容一起计算宽度和高度 */  
+  /* 你可以选择以下两种方式之一来隐藏div */  
+  display: none; /* 或 */  
+  visibility: hidden; /* 这两种方式都可以隐藏div，但方式1会完全移除元素，方式2会保留空间 */  
+}
+.clustrmap a {  
+  width: 2px;  
+  height: 2px;  
+  border: 2px solid; /* 确保边框宽度为2px */  
+  box-sizing: border-box; /* 确保边框和内容一起计算宽度和高度 */  
+  /* 你可以选择以下两种方式之一来隐藏div */  
+  display: none; /* 或 */  
+  visibility: hidden; /* 这两种方式都可以隐藏div，但方式1会完全移除元素，方式2会保留空间 */  
 }
 
 @media screen and (max-width: 767px) {
